# tidyup

./: .gitignore  Cargo.toml  README.md  run.py
.github/workflows/: ci.yml
benches/: run_effect.rs
src/: app.rs  client.rs  core.rs  design.txt  effect_runner.rs  hotstuff.rs  lib.rs  main.rs  misc.rs  pbft.rs  receiver.rs  simulated.rs  state.rs  transport.rs  unreplicated.rs  worker.rs
src/driver/: bench_client.rs  bench_replica.rs
src/message/: Cargo.toml
src/message/src/: lib.rs  pbft.rs
src/messages/: Cargo.toml
src/messages/benches/: quorum_signature.rs
src/messages/src/: crypto.rs  hotstuff.rs  lib.rs  unreplicated.rs
src/program/: bench_client.rs  bench_replica.rs  replica.rs
src/run/: Cargo.toml
src/run/examples/: localhost.rs
src/run/src/: main.rs
