[package]
name = "messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
secp256k1 = { version = "0.24.1", features = ["serde", "bitcoin_hashes"] }
serde = { version = "1.0.147", features = ["derive"] }
