[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "quorum_signature"
harness = false

[dependencies]
bincode = "1.3.3"
blsttc = "7.1.0"
rand = "0.8.5"
secp256k1 = { version = "0.24.1", features = ["serde", "bitcoin_hashes", "rand"] }
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"