[package]
name = "run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
message = { version = "0.1.0", path = "../message" }
rand = "0.8.5"
secp256k1 = { version = "0.24.1", features = ["rand"] }
